# vyser

./: .gitignore  LICENSE  README.md  pyproject.toml
diagnostics/: diagnostic.py  diagnostic_bag.py  text_span.py
src/vyser/diagnostics/: diagnostic.py  diagnostic_bag.py  text_span.py
src/vyser/rules/: base.py  context.py  engine.py  factory.py
src/vyser/syntax/: binary_expression_syntax.py  evaluator.py  expression_syntax.py  iterator.py  lexer.py  literal_expression_syntax.py  name_expression_syntax.py  parenthesis_expression_syntax.py  parser.py  syntax_facts.py  syntax_kind.py  syntax_node.py  syntax_token.py  syntax_tree.py  unary_expression_syntax.py
syntax/: binary_expression_syntax.py  evaluator.py  expression_syntax.py  iterator.py  lexer.py  literal_expression_syntax.py  name_expression_syntax.py  parenthesis_expression_syntax.py  parser.py  syntax_facts.py  syntax_kind.py  syntax_node.py  syntax_token.py  syntax_tree.py  unary_expression_syntax.py
